# Rails

./: Makefile  example.py  pyproject.toml  user.json
templates/: index.html
templates/users/: edit.html  new.html
